--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/media.css">
 	<link rel="stylesheet" href="css/slider.css">
@@ -46,12 +45,12 @@
 							</li>
 
 							<div class="register__panel">
-								<div class="login">
-									<a href="#" class="btn__login">Login</>
-								</div>
-								<div class="register">
-									<a href="#" class="btn__register">Register</a>
-								</div>
+								<button class="btn login">
+									Login
+								</button>
+								<button class="btn">
+									Register
+								</button>
 							</div>
 						</ul>					
 					</nav>	
@@ -66,9 +65,9 @@
 						<div class="info__title">
 							<h1>Could you be our<br><span>next winner?</span> </h1>
 						</div>
-						<div class="info__button">
-							<a href="">Enter now</a>
-						</div>
+						<button class="info__button">
+							Enter now
+						</button>
 					</div>
 					<div class="title__foto">
 						<img class="info__foto"src="img/autotitle.jpg" alt="auto">
@@ -82,53 +81,53 @@
 		<section class="block1">
 			<div class="container">
 					<div class="block1__title">
-						<h3>Latest Competitions</h3>
+						<h2 class="h2__start">Latest Competitions</h2>
 					</div>
 					<div class="items">
 						<div class="slider">
 							<div class="slider__item item">
-								<img class="item__foto" src="img/auto1.jpg" alt="auto1">
-								<h4 class="item__title">2020 Audi S5 Coupe</h4>
+								<div class="slider__img">
+									<img class="item__foto" src="img/auto1.jpg" alt="auto1">
+								</div>
+								<h3 class="item__title">2020 Audi S5 Coupe</h3>
 								<p class="item__price">$19.99<span>$54.68</span></p>
 								<p class="item__info">5878 tickets remaining</p>
-								<div class="strela">
-									<a href="#">
-										<img class="iconstrela" src="img/strela.svg" alt="strela">
-									</a>
-								</div>
+								<button class="strela">
+									<span class="arrow__small"></span>
+								</button>
 							</div>
 							<div class="slider__item item">
-								<img class="item__foto" src="img/auto2.jpg" alt="auto1">
-								<h4 class="item__title">2016 Ford Mustang GT</h4>
+								<div class="slider__img">
+									<img class="item__foto" src="img/auto2.jpg" alt="auto1">
+								</div>
+								<h3 class="item__title">2016 Ford Mustang GT</h3>
 								<p class="item__price">$7.99<span>$9.68</span></p>
 								<p class="item__info">3290 tickets remaining</p>
-								<div class="strela">
-									<a href="#">
-										<img class="iconstrela" src="img/strela.svg" alt="strela">
-									</a>
-								</div>
+								<button class="strela">
+									<span class="arrow__small"></span>
+								</button>
 							</div>
 							<div class="slider__item item">
-								<img class="item__foto" src="img/auto3.jpg" alt="auto1">
-								<h4 class="item__title">2020 Bugatti Chiron</h4>
+								<div class="slider__img">
+									<img class="item__foto" src="img/auto3.jpg" alt="auto1">
+								</div>
+								<h3 class="item__title">2020 Bugatti Chiron</h3>
 								<p class="item__price">$0.99<span>$1.39</span></p>
 								<p class="item__info">4014 tickets remaining</p>
-								<div class="strela">
-									<a href="#">
-										<img class="iconstrela" src="img/strela.svg" alt="strela">
-									</a>
-								</div>
+								<button class="strela">
+									<span class="arrow__small"></span>
+								</button>
 							</div>
 							<div class="slider__item item">
-								<img class="item__foto" src="img/auto4.jpg" alt="auto1">
-								<h4 class="item__title">2019 Porsche 911 Carrera</h4>
+								<div class="slider__img">
+									<img class="item__foto" src="img/auto4.jpg" alt="auto1">
+								</div>
+								<h3 class="item__title">2019 Porsche 911 Carrera</h3>
 								<p class="item__price">$1.99<span>$2.99</span></p>
 								<p class="item__info">484 tickets remaining</p>
-								<div class="strela">
-									<a href="#">
-										<img class="iconstrela" src="img/strela.svg" alt="strela">
-									</a>
-								</div>
+								<button class="strela">
+									<span class="arrow__small"></span>
+								</button>
 							</div>
 						</div>
 					</div>
@@ -138,79 +137,123 @@
 		<section class="block2">
 			<div class="container">
 				<div class="block2__title">
-					<h3>How it works</h3>
+					<h2>How it works</h2>
 				</div>
 				<div class="steps">
+
 					<div class="step__item">
-						<img class="step__icon" src="img/icon1.svg" alt="icon1">
+						<div class="step__img">
+							<img class="step__icon" src="img/icon1.svg" alt="icon1">
+						</div>
 						<p class="step__text">Choose a competition and how many entries you would like</p>
 					</div>
 					<span class="arrow-works"></span>
+
 					<div class="step__item">
-						<img class="step__icon" src="img/icon2.svg" alt="icon2">
+						<div class="step__img">
+							<img class="step__icon" src="img/icon2.svg" alt="icon2">
+						</div>
 						<p class="step__text">Answer the qualifying question <span>(be sure to answer correctly!)</span> and complete payment</p>
 					</div>
-					<span class="arrow-works"></span>
+					<span class="arrow-works arrow-works-none"></span>
+
 					<div class="step__item">
-						<img class="step__icon" src="img/icon3.svg" alt="icon3">
+						<div class="step__img">
+							<img class="step__icon" src="img/icon3.svg" alt="icon3">
+						</div>
 						<p class="step__text">Tickets for all correct answers are entered into the draw, streamed LIVE on Facebook using Google’s random number generator</p>
 					</div>
 					<span class="arrow-works"></span>
+
 					<div class="step__item">
-						<img class="step__icon" src="img/icon4.svg" alt="icon4">
+						<div class="step__img">
+							<img class="step__icon" src="img/icon4.svg" alt="icon4">
+						</div>
 						<p class="step__text">If you win, we may try to contact you whilst live on Facebook, so be prepared!</p>
 					</div>
+
 				</div>
 			</div>
 		</section>
 
-		<section class="block3">
-			<div class="container2">
-				<div class="about">
-					<div class="about__info">
-						<p class="about__text">"Unbelievable this is a dream come true, no way would I ever think I would own <br> a car like this. What great blokes. <br> Thank you very much! <br> 5 star from me!!!"</p>
-						<p class="about__avtor">Danny Churchman</p>
-						<div class="circles">
-							<span class="circle1"></span>
-							<span class="circle2"></span>
-							<span class="circle3"></span>
+		<section class="nlo">
+			<div class="container22">
+					<div class="slider3">
+						<div class="slider-item">
+							<div class="flex__slider">
+								<div class="slider22__item">
+									<p class="about__text">"Unbelievable this is a dream come true, no way would I ever think I would own a car like this. What great blokes. <br> Thank you very much! <br> 5 star from me!!!"</p>
+									<p class="about__avtor">Ban Hinmann</p>
+								</div>
+								<div class="about__foto about__item">
+									<img src="img/about-foto.jpg" alt="aboutFoto">
+								</div>
+							</div>
+						</div>
+						<div class="slider__item">
+							<div class="flex__slider">
+								<div class="slider22__item">
+									<p class="about__text">"Unbelievable this is a dream come true, no way would I ever think I would own <br> a car like this. What great blokes. <br> Thank you very much!</p>
+									<p class="about__avtor">Danny Churchman</p>
+								</div>
+								<div class="about__foto about__item">
+									<img src="img/about-foto2.jpg" alt="aboutFoto">
+								</div>
+							</div>
+						</div>
+						<div class="slider__item">
+							<div class="flex__slider">
+								<div class="slider22__item">
+									<p class="about__text">"Unbelievable this is a dream come true, no way would I ever think I would own <br> a car like this. What great blokes. <br> Thank you very much!</p>
+									<p class="about__avtor">John Born</p>
+								</div>
+								<div class="about__foto about__item">
+									<img src="img/about-foto3.jpg" alt="aboutFoto">
+								</div>
+							</div>
 						</div>
 					</div>
-					<div class="about__foto">
-						<img src="img/about-foto.jpg" alt="aboutFoto">
-					</div>
-				</div>
 			</div>
+				
+
+
 		</section>
 
 		<section class="block4">
 			<div class="container">
 				<div class="winner">
-					<h3>Latest Winners</h3>
+					<h2 class="h2__start">Latest Winners</h2>
 					<div class="items">
 						<div class="slider">
-							<div class="item">
-								<img class="item__foto" src="img/win1.jpg" alt="auto1">
-								<h4 class="item__title">Ferrari 458</h4>
+							<div class="item">	
+								<div class="slider__img">
+									<img class="item__foto" src="img/win1.jpg" alt="auto1">
+								</div>
+								<h3 class="item__title">Ferrari 458</h3>
 								<p class="item__info item__info-win">12 November 2020</p>
 							</div>
-							<div class="item">
-								<img class="item__foto" src="img/win2.jpg" alt="auto1">
-								<h4 class="item__title">Aquila Gullwing</h4>
+							<div class="item">						
+								<div class="slider__img">
+									<img class="item__foto" src="img/win2.jpg" alt="auto1">
+								</div>
+								<h3 class="item__title">Aquila Gullwing</h3>
 								<p class="item__info item__info-win">9 November 2020</p>
 							</div>
 							<div class="item">
-								<img class="item__foto" src="img/win3.jpg" alt="auto1">
-								<h4 class="item__title">2020 Audi S5 Coupe</h4>
+								<div class="slider__img">
+									<img class="item__foto" src="img/win3.jpg" alt="auto1">
+								</div>
+								<h3 class="item__title">2020 Audi S5 Coupe</h3>
 								<p class="item__info item__info-win">5 November 2020</p>
 							</div>
 							<div class="item">
-								<img class="item__foto" src="img/win4.jpg" alt="auto1">
-								<h4 class="item__title">Ferrari Purosangue SUV</h4>
+								<div class="slider__img">
+									<img class="item__foto" src="img/win4.jpg" alt="auto1">
+								</div>
+								<h3 class="item__title">Ferrari Purosangue SUV</h3>
 								<p class="item__info item__info-win">25 September 2020</p>
 							</div>
 						</div>
-
 					</div>
 				</div>
 			</div>
@@ -249,6 +292,7 @@
 				</div>
 			</div>
 		</footer>
+
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 	<script src="js/slick.min.js"></script>
