--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						</button>
 					</div>
 					<div class="title__foto">
-						<img class="info__foto" src="img/autotitle.jpg" alt="auto">
+						<img class="info__foto" src="img/autotitle.webp" alt="auto">
 					</div>
 				</div>
 					
@@ -87,7 +87,7 @@
 						<div class="slider">
 							<div class="slider__item item">
 								<div class="slider__img">
-									<img class="item__foto" src="img/auto1.jpg" alt="auto1">
+									<img class="item__foto" src="img/auto1.webp" alt="auto1">
 								</div>
 								<h3 class="item__title">2020 Audi S5 Coupe</h3>
 								<p class="item__price">$19.99<span>$54.68</span></p>
@@ -98,7 +98,7 @@
 							</div>
 							<div class="slider__item item">
 								<div class="slider__img">
-									<img class="item__foto" src="img/auto2.jpg" alt="auto1">
+									<img class="item__foto" src="img/auto2.webp" alt="auto1">
 								</div>
 								<h3 class="item__title">2016 Ford Mustang GT</h3>
 								<p class="item__price">$7.99<span>$9.68</span></p>
@@ -109,7 +109,7 @@
 							</div>
 							<div class="slider__item item">
 								<div class="slider__img">
-									<img class="item__foto" src="img/auto3.jpg" alt="auto1">
+									<img class="item__foto" src="img/auto3.webp" alt="auto1">
 								</div>
 								<h3 class="item__title">2020 Bugatti Chiron</h3>
 								<p class="item__price">$0.99<span>$1.39</span></p>
@@ -120,7 +120,7 @@
 							</div>
 							<div class="slider__item item">
 								<div class="slider__img">
-									<img class="item__foto" src="img/auto4.jpg" alt="auto1">
+									<img class="item__foto" src="img/auto4.webp" alt="auto1">
 								</div>
 								<h3 class="item__title">2019 Porsche 911 Carrera</h3>
 								<p class="item__price">$1.99<span>$2.99</span></p>
@@ -186,32 +186,33 @@
 									<p class="about__avtor">Ban Hinmann</p>
 								</div>
 								<div class="about__foto about__item">
-									<img src="img/about-foto.jpg" alt="aboutFoto">
+									<img src="img/about-foto.webp" alt="aboutFoto">
 								</div>
 							</div>
 						</div>
-						<div class="slider__item">
-							<div class="flex__slider">
-								<div class="slider22__item">
-									<p class="about__text">"Unbelievable this is a dream come true, no way would I ever think I would own <br> a car like this. What great blokes. <br> Thank you very much!</p>
-									<p class="about__avtor">Danny Churchman</p>
-								</div>
-								<div class="about__foto about__item">
-									<img src="img/about-foto2.jpg" alt="aboutFoto">
-								</div>
-							</div>
-						</div>
-						<div class="slider__item">
-							<div class="flex__slider">
-								<div class="slider22__item">
-									<p class="about__text">"Unbelievable this is a dream come true, no way would I ever think I would own <br> a car like this. What great blokes. <br> Thank you very much!</p>
-									<p class="about__avtor">John Born</p>
-								</div>
-								<div class="about__foto about__item">
-									<img src="img/about-foto3.jpg" alt="aboutFoto">
+							<div class="slider__item">
+								<div class="flex__slider">
+									<div class="slider22__item">
+										<p class="about__text">"Unbelievable this is a dream come true, no way would I ever think I would own <br> a car like this. What great blokes. <br> Thank you very much!</p>
+										<p class="about__avtor">Danny Churchman</p>
+									</div>
+									<div class="about__foto about__item">
+										<img src="img/about-foto2.webp" alt="aboutFoto">
+									</div>
 								</div>
 							</div>
-						</div>
+							<div class="slider__item">
+								<div class="flex__slider">
+									<div class="slider22__item">
+										<p class="about__text">"Unbelievable this is a dream come true, no way would I ever think I would own <br> a car like this. What great blokes. <br> Thank you very much!</p>
+										<p class="about__avtor">John Born</p>
+									</div>
+									<div class="about__foto about__item">
+										<img src="img/about-foto3.webp" alt="aboutFoto">
+									</div>
+								</div>
+							</div>
+						
 					</div>
 			</div>
 		</section>
@@ -224,28 +225,28 @@
 						<div class="slider">
 							<div class="item">	
 								<div class="slider__img">
-									<img class="item__foto" src="img/win1.jpg" alt="auto1">
+									<img class="item__foto" src="img/win1.webp" alt="auto1">
 								</div>
 								<h3 class="item__title">Ferrari 458</h3>
 								<p class="item__info item__info-win">12 November 2020</p>
 							</div>
 							<div class="item">						
 								<div class="slider__img">
-									<img class="item__foto" src="img/win2.jpg" alt="auto1">
+									<img class="item__foto" src="img/win2.webp" alt="auto1">
 								</div>
 								<h3 class="item__title">Aquila Gullwing</h3>
 								<p class="item__info item__info-win">9 November 2020</p>
 							</div>
 							<div class="item">
 								<div class="slider__img">
-									<img class="item__foto" src="img/win3.jpg" alt="auto1">
+									<img class="item__foto" src="img/win3.webp" alt="auto1">
 								</div>
 								<h3 class="item__title">2020 Audi S5 Coupe</h3>
 								<p class="item__info item__info-win">5 November 2020</p>
 							</div>
 							<div class="item">
 								<div class="slider__img">
-									<img class="item__foto" src="img/win4.jpg" alt="auto1">
+									<img class="item__foto" src="img/win4.webp" alt="auto1">
 								</div>
 								<h3 class="item__title">Ferrari Purosangue SUV</h3>
 								<p class="item__info item__info-win">25 September 2020</p>
