--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 						<div class="slider-item">
 							<div class="flex__slider">
 								<div class="slider22__item">
-									<p class="about__text">"Unbelievable this is a dream come true, no way would I ever think I would own a car like this. What great blokes. <br> Thank you very much! <br> 5 star from me!!!"</p>
+									<p class="about__text">"Unbelievable this is a dream come true, <br> no way would I ever think I would own a car like this. <br> What great blokes. <br> Thank you very much! <br> 5 star from me!!!"</p>
 									<p class="about__avtor">Ban Hinmann</p>
 								</div>
 								<div class="about__foto about__item">
@@ -256,6 +256,8 @@
 				</div>
 			</div>
 		</section>
+
+	
 
 		<footer class="footer">
 			<div class="container">
